k8s/networkpolicies/all-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: ollamahub
spec:
  podSelector: {}
  policyTypes:
    - Ingress
