k8s/networkpolicies/allow-backend-to-ollama.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-to-ollama
  namespace: ollamahub
spec:
  podSelector:
    matchLabels:
      app: ollama
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: backend-deployment-label
      ports:
        - protocol: TCP
          port: 11434
