k8s/networkpolicies/allow-frontend-to-backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-backend
  namespace: ollamahub
spec:
  podSelector:
    matchLabels:
      app: backend-deployment-label
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: web-app-deployments
      ports:
        - protocol: TCP
          port: 8000
